--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ spring:
       - public
       - list
     baseline-on-migrate: true
+    driver-class-name: org.postgresql.Driver
 
 server:
   port: 8081
